k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-deployment
  namespace: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path:   '/metrics'
        prometheus.io/port:   '3000'
    spec:
      containers:
      - name: weather-app-container
        image: 501257812675.dkr.ecr.ap-northeast-2.amazonaws.com/my-node-app:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
