k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
  labels:
    app: my-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
        - name: my-website
          image: <ECR_IMAGE_URI>
          ports:
            - containerPort: 3000
