k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-website
spec:
  selector:
    app: my-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
